k8s_manifests/hydra_svc.yaml
apiVersion: v1
kind: Service
metadata:
   name: hydra-svc
   labels:
     app: hydra
spec:
   type: ClusterIP
   #type: NodePort
   ports:
   - name: flask
     port: 9000
   selector:
     app: hydra
